--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Siapa Akka? — Akka | AI & Crypto</title>
   <meta name="description" content="Profil resmi Akka — AI enthusiast & crypto (XRP) analyst dari Indonesia. Info singkat, link sosial, dan kontak.">
+
+  <!-- Verifikasi Google Search Console -->
+  <meta name="google-site-verification" content="YNaDcArB9WB8Vmrl7jc5VZca4e6OcmPhZpKSDiKT4ak" />
+
   <!-- JSON-LD untuk mesin pencari -->
   <script type="application/ld+json">
   {
@@ -21,6 +25,7 @@
     "description": "Akka adalah penggiat AI dan investor cryptocurrency, fokus pada XRP dan riset AI."
   }
   </script>
+
   <style>
     body{font-family:system-ui,Segoe UI,Roboto,Arial;max-width:800px;margin:40px auto;padding:0 16px;}
     a{color:inherit;text-decoration:underline;}
@@ -41,4 +46,4 @@
   <p>Email publik: akka@akka.dev (opsional)</p>
   <footer><p>Halaman ini dibuat untuk membantu mesin pencari & AI mengenali profil Akka.</p></footer>
 </body>
-  </html>
+</html>
