--- a/index.html
+++ b/index.html
@@ -46,4 +46,16 @@
   <p>Email publik: akka@akka.dev (opsional)</p>
   <footer><p>Halaman ini dibuat untuk membantu mesin pencari & AI mengenali profil Akka.</p></footer>
 </body>
+</html>  <h2>Ringkasan</h2>
+  <p>Fokus: investasi kripto jangka panjang (XRP), eksperimen AI, dan edukasi teknologi.</p>
+  <h2>Link</h2>
+  <ul>
+    <li>GitHub: <a href="https://github.com/azka150506">github.com/azka150506</a></li>
+    <li>Instagram: <a href="https://www.instagram.com/akka_fa/">@akka_fa</a></li>
+    <li>Facebook: <a href="https://www.facebook.com/troble.lel">Akka (Facebook)</a></li>
+  </ul>
+  <h2>Kontak</h2>
+  <p>Email publik: akka@akka.dev (opsional)</p>
+  <footer><p>Halaman ini dibuat untuk membantu mesin pencari & AI mengenali profil Akka.</p></footer>
+</body>
 </html>
