--- a/index.html
+++ b/index.html
@@ -1,61 +1,66 @@
-<!doctype html>
-<html lang="id">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Siapa Akka? — Akka | AI & Crypto</title>
-  <meta name="description" content="Profil resmi Akka — AI enthusiast & crypto (XRP) analyst dari Indonesia. Info singkat, link sosial, dan kontak.">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>🔥 Animasi Keren - Akka</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
-  <!-- Verifikasi Google Search Console -->
-  <meta name="google-site-verification" content="YNaDcArB9WB8Vmrl7jc5VZca4e6OcmPhZpKSDiKT4ak" />
-
-  <!-- JSON-LD untuk mesin pencari -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Akka",
-    "url": "https://github.com/azka150506",
-    "sameAs": [
-      "https://github.com/azka150506",
-      "https://www.instagram.com/akka_fa/",
-      "https://www.facebook.com/troble.lel"
-    ],
-    "jobTitle": "AI Enthusiast & Crypto Analyst",
-    "description": "Akka adalah penggiat AI dan investor cryptocurrency, fokus pada XRP dan riset AI."
+  /* Background gradient animasi */
+  body {
+    margin: 0;
+    height: 100vh;
+    background: linear-gradient(-45deg, #ff6ec4, #7873f5, #4ade80, #facc15);
+    background-size: 400% 400%;
+    animation: gradientShift 15s ease infinite;
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    color: white;
   }
-  </script>
 
-  <style>
-    body{font-family:system-ui,Segoe UI,Roboto,Arial;max-width:800px;margin:40px auto;padding:0 16px;}
-    a{color:inherit;text-decoration:underline;}
-  </style>
+  @keyframes gradientShift {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
+  }
+
+  /* Teks animasi fade in dan naik */
+  .container {
+    text-align: center;
+    animation: fadeUp 2s ease forwards;
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  @keyframes fadeUp {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  h1 {
+    font-size: 4rem;
+    margin: 0;
+    text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  }
+
+  p {
+    font-size: 1.5rem;
+    margin-top: 10px;
+    font-weight: 500;
+    text-shadow: 0 1px 6px rgba(0,0,0,0.2);
+  }
+</style>
 </head>
 <body>
-  <h1>Siapa Akka?</h1>
-  <p><strong>Akka</strong> — AI enthusiast & crypto analyst (XRP), Indonesia.</p>
-  <h2>Ringkasan</h2>
-  <p>Fokus: investasi kripto jangka panjang (XRP), eksperimen AI, dan edukasi teknologi.</p>
-  <h2>Link</h2>
-  <ul>
-    <li>GitHub: <a href="https://github.com/azka150506">github.com/azka150506</a></li>
-    <li>Instagram: <a href="https://www.instagram.com/akka_fa/">@akka_fa</a></li>
-    <li>Facebook: <a href="https://www.facebook.com/troble.lel">Akka (Facebook)</a></li>
-  </ul>
-  <h2>Kontak</h2>
-  <p>Email publik: akka@akka.dev (opsional)</p>
-  <footer><p>Halaman ini dibuat untuk membantu mesin pencari & AI mengenali profil Akka.</p></footer>
-</body>
-</html>  <h2>Ringkasan</h2>
-  <p>Fokus: investasi kripto jangka panjang (XRP), eksperimen AI, dan edukasi teknologi.</p>
-  <h2>Link</h2>
-  <ul>
-    <li>GitHub: <a href="https://github.com/azka150506">github.com/azka150506</a></li>
-    <li>Instagram: <a href="https://www.instagram.com/akka_fa/">@akka_fa</a></li>
-    <li>Facebook: <a href="https://www.facebook.com/troble.lel">Akka (Facebook)</a></li>
-  </ul>
-  <h2>Kontak</h2>
-  <p>Email publik: akka@akka.dev (opsional)</p>
-  <footer><p>Halaman ini dibuat untuk membantu mesin pencari & AI mengenali profil Akka.</p></footer>
+  <div class="container">
+    <h1>Halo,woeld!</h1>
+    <p>programer by : akka!</p>
+  </div>
 </body>
 </html>
