--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Halo,woeld!</h1>
+    <h1>Halo,world!</h1>
     <p>programer by : akka!</p>
   </div>
 </body>
