--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
     <div class="title" aria-label="Nama Akka Programer">AKKA PROGRAMER</div>
     <div class="subtitle">Crypto Enthusiast & Future-Proof Investor</div>
     <p class="description">
-      Sering update dari teks pembicaraan, fokus investasi jangka panjang XRP, dan terus upgrade skill untuk masa depan yang lebih cerah.
+      mendalami AI,melakukan beberapa program coding,dan analisa market crypto.
     </p>
 
     <ul class="info-list">
       <li><strong>Nama:</strong> Akka</li>
-      <li><strong>Keahlian:</strong> Jangka Panjang di XRP & Programming</li>
-      <li><strong>Goal:</strong> Investasi Leher ke Atas (Self-Development)</li>
-      <li><strong>Email:</strong> akka@example.com</li>
+      <li><strong>Keahlian:</strong> AI dan program digital</li>
+      <li><strong>Tujuan:</strong> Investasi Leher ke Atas di bidang crypto (Self-Development)</li>
+      <li><strong>Whatsapp:</strong> 087725277237</li>
       <li><strong>Lokasi:</strong> Indonesia</li>
     </ul>
 
